--- a/hu_centos_610.adoc
+++ b/hu_centos_610.adoc
@@ -122,7 +122,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known Problems and Limitations
 
-There are no known issues for RHEL 6.10.
+For CentOS (Red Hat compatible kernel) known issues, see the link:hu_rhel_610.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 6.10.
 
 == Release Notes
 
