--- a/hu_centos_67.adoc
+++ b/hu_centos_67.adoc
@@ -121,7 +121,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known Problems and Limitations
 
-There are no known issues for RHEL 6.7.
+For CentOS (Red Hat compatible kernel) known issues, see the link:hu_rhel_67.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 6.7.
 
 == Release Notes
 
