updates as per SME instruction 23 aug

--- a/nvme_esxi_7.adoc
+++ b/nvme_esxi_7.adoc
@@ -5,7 +5,7 @@ keywords: nvme, esxi, ontap
 summary: Describes how to configure NVMe/FC for ESXi 7.0 with ONTAP
 ---
 
-= NVMe/FC Host Configuration for ESXi 7.0 with ONTAP
+= NVMe-oF Host Configuration for ESXi 7.0 with ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
