--- a/nvme_rhel_84.adoc
+++ b/nvme_rhel_84.adoc
@@ -28,8 +28,6 @@ NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is support
 
 *	Starting RHEL 8.2, the NetApp plugin in the native `nvme-cli` package is capable of displaying ONTAP details as well for ONTAP namespaces.
 
-*	RHEL 8.4 would include support for NVMe/TCP as well, in addition to NVMe/FC. The above NetApp plugin should work for both transports.
-
 
 == Known limitations
 
@@ -58,37 +56,11 @@ Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability M
 
 === Initiator
 
-*	RHEL 8.4 (ISO available on the NB PXE at `/x/eng/nbshare/saninteroppxe/all_isoimages/RHEL/RHEL8/8.4/GA/`), it is recommended to select the Development Tools packages additionally during the OS installation.
-
-[NOTE]
-====
-. With the default setting of `crashkernel=auto`, it is not possible to get the RHEL host to dump core during a crash. To resolve this, set `crashkernel = 256M` using the below grubby command and enable crash dump compression on the console:
-+
-
-``# grubby --args=crashkernel=256M --update-kernel /boot/vmlinuz-4.18.0-305.el8.x86_64`
-+
-
-. Reboot the host. After rebooting, verify that the crashkernel is set to 256M instead of auto.
-
-. Verify that the host is able to dump core at `/var/crash/` by manually triggering a host crash. Run the command `echo c > /proc/sysrq-trigger`) to trigger a host crash.
-
-+
-
-`# cat /proc/cmdline`
-+
-----
-BOOT_IMAGE=(hd0,gpt2)/vmlinuz-4.18.0-305.el8.x86_64 root=/dev/mapper/rhel_interop--57--141-root ro resume=/dev/mapper/rhel_interop--57--141-swap rd.lvm.lv=rhel_interop-57-141/root rd.lvm.lv=rhel_interop-57-141/swap rhgb quiet nvme_core.multipath=Y crashkernel=256M
-----
-====
-
-
-*	Ensure the requisite initiator adapters (FC adapters for NVMe/FC) are installed on the host.
+*	Ensure that the requisite initiator adapters (FC adapters for NVMe/FC) are installed on the host.
 
 === Target modules
 
-*	ONTAP 9.9.1 running on A300
-*	Broadcom 32G FC target module (for NVMe/FC)
-*	Mellanox CX-5 RNIC target module (for NVMe/TCP or NVMe/RoCE)
+Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix] for accurate details regarding supported configurations.
 
 == Enabling in-kernel NVMe Multipath
 
@@ -220,7 +192,7 @@ FCP CMPL: xb 00001f50 Err 0000d9f8
 ----
 +
 
-.	Enable 1MB I/O size
+.	(Optional) Enable 1MB I/O size.
 +
 
 The `lpfc_sg_seg_cnt` parameter needs to be set to 256 for the lpfc driver to issue I/O requests upto 1 MB size.
@@ -260,7 +232,7 @@ QLE2742 FW:v9.06.02 DVR:v10.02.00.104-k
 1
 ----
 
-== Validating NVMf
+== Validating NVMe-oF
 
 *	Verify that in-kernel NVMe multipath is enabled:
 +
