--- a/nvme_sles15_sp3.adoc
+++ b/nvme_sles15_sp3.adoc
@@ -16,12 +16,12 @@ summary: Describes how to configure NVMe/FC for SUSE Linux Enterprise Server 15 
 
 == Supportability
 
-NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with SUSE Linux Enterprise Server 15 SP3 (SLES15 SP3) with ANA (Asymmetric Namespace Access) required for surviving storage failures (SFOs) on the NetApp array. ANA is the ALUA equivalent in the NVMf (NVMe-oF) environment, and is currently implemented with in-kernel NVMe Multipath. The details for enabling NVMf with in-kernel NVMe Multipath using ANA on RHEL 8.4 and ONTAP as the target has been documented here.
+NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with SUSE Linux Enterprise Server 15 SP3 (SLES15 SP3) with ANA (Asymmetric Namespace Access) required for surviving storage failures (SFOs) on the NetApp array. ANA is the ALUA equivalent in the NVMf (NVMe-oF) environment, and is currently implemented with in-kernel NVMe Multipath. The details for enabling NVMf with in-kernel NVMe Multipath using ANA on SLES15 SP3 and ONTAP as the target has been documented here.
 
 == Features
 
 *	SLES15 SP3 supports NVMe/FC and other transports.
-*	There is no sanlun support for NVMf. Therefore, there is no LUHU support for NVMf on SLES15 SP3. You might rely on the NetApp plug-in included in the native nvme-cli for the same instead. This should work for all NVMf transports.
+*	There is no sanlun support for NVMf. Therefore, there is no LUHU support for NVMf on SLES15 SP3. You can rely on the NetApp plug-in included in the native nvme-cli for the same instead. This should work for all NVMf transports.
 *	Both NVMe & SCSI traffic can be run on the same co-existent host. In fact, that is expected to be the commonly deployed host config for customers. Therefore, for SCSI, you may configure `dm-multipath` as usual for SCSI LUNs resulting in mpath devices, whereas NVMe multipath might be used to configure NVMf multipath devices (such as, `/dev/nvmeXnY`) on the host.
 
 ==	Known limitations
@@ -60,23 +60,28 @@ Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability M
 
 == Enabling in-kernel NVMe Multipath
 
-In-kernel NVMe multipath is already enabled by default on SLES hosts such as SLES15 SP3.
+In-kernel NVMe multipath is already enabled by default on SLES hosts such as SLES15 SP3. Therefore, no additional setting is required here.
 
 == Updating NVMf initiator packages
 
-*	Separately install the SLES15 SP3 MU kernel-default-5.3.18-59.5.2 to avail the latest kernel fixes:
-# rpm -ivh kernel-default-5.3.18-59.5.2.x86_64.rpm kernel-default-devel-5.3.18-59.5.2.x86_64.rpm kernel-devel-5.3.18-59.5.2.noarch.rpm kernel-macros-5.3.18-59.5.2.noarch.rpm  kernel-source-5.3.18-59.5.2.noarch.rpm
-
-NOTE:
+.	Install the link:http://nbsweb.eng.btc.netapp.in/u/marting/web/SLES15SP3/kernel/5.3.18-59.5.2/[SLES15 SP3 MU kernel-default-5.3.18-59.5.2] separately to avail the latest kernel fixes:
 +
-•
-o	If the above 'rpm -ivh' command fails with the message that a newer package is already installed, then proceed to install this using the --oldpackage option, as in:
+----
+# rpm -ivh kernel-default-5.3.18-59.5.2.x86_64.rpm kernel-default-devel-5.3.18-59.5.2.x86_64.rpm kernel-devel-5.3.18-59.5.2.noarch.rpm kernel-macros-5.3.18-59.5.2.noarch.rpm  kernel-source-5.3.18-59.5.2.noarch.rpm
+----
++
+
+* If the above `rpm -ivh` command fails with the message that a newer package is already installed, then proceed to install this using the `--oldpackage` option, such as:
++
+----
  # rpm -ivh kernel-default-5.3.18-59.5.2.x86_64.rpm kernel-default-devel-5.3.18-59.5.2.x86_64.rpm kernel-devel-5.3.18-59.5.2.noarch.rpm  kernel-macros-5.3.18-59.5.2.noarch.rpm  kernel-source-5.3.18-59.5.2.noarch.rpm --oldpackage
-•
-o	To make the above kernel the default entry in the grub bootloader, run the following commands:
-	# grub2-set-default 'Advanced options for SLES 15-SP3>SLES 15-SP3, with Linux 5.3.18-59.5-default'
-	# grub2-mkconfig -o /boot/grub2/grub.cfg
+----
+* To make the above kernel the default entry in the grub bootloader, run the following commands:
+**	`# grub2-set-default 'Advanced options for SLES 15-SP3>SLES 15-SP3, with Linux 5.3.18-59.5-default`
+**	`# grub2-mkconfig -o /boot/grub2/grub.cfg`
++
 Now the host would pick the above kernel as the default grub entry during reboot.
+
 
 .	Reboot the host and ensure it boots into the above SLES15 SP3 MU kernel:
 +
@@ -93,9 +98,11 @@ Now the host would pick the above kernel as the default grub entry during reboot
 nvme-cli-1.13-3.3.1.x86_64
 ----
 +
-Please note, the above nvme-cli MU package includes the following now:
-•
-o	NVMe/FC auto-connect scripts - Included natively in the nvme-cli now. So one no longer needs to install the Broadcom/QLogic auto-connects separately on the SLES15 SP3 host:
+[NOTE]
+====
+The above nvme-cli MU package includes the following now:
+
+*	NVMe/FC auto-connect scripts - Included natively in the nvme-cli now. Threfore, you no longer need to install the Broadcom/QLogic auto-connects separately on the SLES15 SP3 host:
 +
 ----
 # rpm -ql nvme-cli-1.13-3.3.1.x86_64
@@ -109,7 +116,7 @@ o	NVMe/FC auto-connect scripts - Included natively in the nvme-cli now. So one n
 ----
 +
 
-o	ONTAP udev rule - New udev rule to ensure NVMe multipath round-robin loadbalancer default applies to all ONTAP namespaces:
+*	ONTAP udev rule - New udev rule to ensure NVMe multipath round-robin loadbalancer default applies to all ONTAP namespaces:
 +
 ----
 # rpm -ql nvme-cli-1.13-3.3.1.x86_64
@@ -130,7 +137,9 @@ ACTION=="add", SUBSYSTEM=="nvme-subsystem", ATTR{model}=="NetApp E-Series", ATTR
 ----
 +
 
-o	NetApp plug-in for ONTAP devices - The existing NetApp plug-in has now been modified to handle ONTAP namespaces as well.
+*	NetApp plug-in for ONTAP devices - The existing NetApp plug-in has now been modified to handle ONTAP namespaces as well.
+====
++
 .	Check the hostnqn string at /etc/nvme/hostnqn on the host and ensure that it properly matches with the hostnqn string for the corresponding subsystem on the ONTAP array. For e.g.
 +
 ----
@@ -151,13 +160,15 @@ nqn.2014-08.org.nvmexpress:uuid:c7b07b16-a22e-41a6-a1fd-cf8262c8713f
 nvme_145_5
 nqn.2014-08.org.nvmexpress:uuid:c7b07b16-a22e-41a6-a1fd-cf8262c8713f
 5 entries were displayed.
-Proceed with the below steps depending on the FC adapter being used on the host.
+
 ----
+Proceed with the below steps depending on the FC adapter being used on the host.
 
 == Configuring NVMe/FC
 
 === Broadcom/Emulex
-•	Verify that you are running with the recommended adapter and firmware versions. For e.g.
+
+.	Verify that you have the recommended adapter and firmware versions. For example,
 +
 ----
 # cat /sys/class/scsi_host/host*/modelname
@@ -171,14 +182,14 @@ Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 12.8.840.8, sli-4:2:c
 ----
 +
-.	The newer lpfc drivers (both inbox & outbox) already have lpfc_enable_fc4_type default set to 3 i.e. one no longer needs to set this explicitly in the /etc/modprobe.d/lpfc.conf anymore, and recreated the initrd. So lpfc nvme support is already enabled by default:
+**	The newer lpfc drivers (both inbox and outbox) already have lpfc_enable_fc4_type default set to 3, therefore, you no longer need to set this explicitly in the `/etc/modprobe.d/lpfc.conf` anymore, and recreate the `initrd`. The `lpfc nvme` support is already enabled by default:
 +
 ----
 # cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 3
 ----
 +
-.	Also, the existing native inbox lpfc driver is already the latest and good enough for NVMe/FC. So no need to install the lpfc oob driver anymore.
+**	 The existing native inbox lpfc driver is already the latest and compatible with NVMe/FC. Therefore, you do not need to install the lpfc oob driver anymore.
 +
 ----
 # cat /sys/module/lpfc/version
@@ -192,7 +203,7 @@ Online
 Online
 ----
 +
-.	Verify that the FC-NVMe initiator ports are enabled and able to see the target ports, and all are up & running. In this example, only 1 initiator port is enabled and connected with two target LIFs as seen in the below output:
+.	Verify that the FC-NVMe initiator ports are enabled and you are able to see the target ports, and all are up and running. In this example, only 1 initiator port is enabled and connected with two target LIFs as seen in the output:
 +
 ----
 # cat /sys/class/scsi_host/host*/nvme_info
@@ -222,37 +233,64 @@ FCP CMPL: xb 0000159d Err 000135c3
 +
 .	Reboot the host.
 
-==== Enabling 1MB I/O Size
-ONTAP 9.7 reports an MDTS (Max Data Transfer Size) of 8 in the Identify Controller data i.e. max I/O request size upto 1MB. But for the Broadcom NVMe/FC host to issue upto 1MB I/O size requests, the lpfc parameter lpfc_sg_seg_cnt should also be bumped up to 256 from the default value of 64. This can be done by appending this value in the respective modprobe lpfc.conf file:
+==== Enabling 1MB I/O Size (Optional)
+
+ONTAP 9.7 reports an MDTS (Max Data Transfer Size) of 8 in the Identify Controller data such as, max I/O request size upto 1MB. But for the Broadcom NVMe/FC host to issue upto 1MB I/O size requests, the lpfc parameter lpfc_sg_seg_cnt should also be bumped up to 256 from the default value of 64. This can be done with the following instructions:
+
+. Append the value 256 in the respective `modprobe lpfc.conf` file:
++
+-----
 # cat /etc/modprobe.d/lpfc.conf
 options lpfc lpfc_sg_seg_cnt=256
-Now run a 'dracut -f', and reboot the host. And after reboot, verify that the above setting has applied by checking the corresponding sysfs value:
+-----
+
+. Run a `dracut -f` command, and reboot the host.
+. After reboot, verify that the above setting has been applied by checking the corresponding sysfs value:
++
+----
 # cat /sys/module/lpfc/parameters/lpfc_sg_seg_cnt
 256
+----
+
 Now the Broadcom FC-NVMe host should be able to send up 1MB I/O requests on the ONTAP namespace devices.
-7.2 Marvell/QLogic
-The native inbox qla2xxx driver included in the newer SLES15 SP3 MU kernel has the latest upstream fixes, essential for ONTAP support. Verify that you are running the supported adapter driver and firmware versions:
+
+=== Marvell/QLogic
+
+The native inbox qla2xxx driver included in the newer SLES15 SP3 MU kernel has the latest upstream fixes, essential for ONTAP support.
+
+. Verify that you are running the supported adapter driver and firmware versions:
++
+----
 # cat /sys/class/fc_host/host*/symbolic_name
 QLE2742 FW:v9.06.02 DVR:v10.02.00.106-k
 QLE2742 FW:v9.06.02 DVR:v10.02.00.106-k
-Verify ql2xnvmeenable is set which enables the Marvell adapter to function as a NVMe/FC initiator:
-# cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
-1
-Ensure you are running the recommended qla2xxx driver & adapter firmware versions:
+----
+
+. Verify `ql2xnvmeenable` is set which enables the Marvell adapter to function as a NVMe/FC initiator:
++
+
+`# cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
+1`
+
+. Ensure you are running the recommended qla2xxx driver & adapter firmware versions:
++
+----
 # cat /sys/class/fc_host/host*/symbolic_name
 QLE2742 FW:v9.06.02 DVR:v10.02.00.106-k
 QLE2742 FW:v9.06.02 DVR:v10.02.00.106-k
+----
 
 
 == Validating NVMf
 
-*	Verify that in-kernel NVMe multipath is indeed enabled by checking:
+.	Verify that in-kernel NVMe multipath is indeed enabled by checking:
 +
 ----
 # cat /sys/module/nvme_core/parameters/multipath
 Y
 ----
-*	Verify that the appropriate NVMf settings (such as, model set to `NetApp ONTAP Controller` and load balancing iopolicy set to `round-robin`) for the respective ONTAP namespaces properly reflect on the host:
+
+.	Verify that the appropriate NVMf settings (such as, model set to `NetApp ONTAP Controller` and load balancing iopolicy set to `round-robin`) for the respective ONTAP namespaces properly reflect on the host:
 +
 ----
 # cat /sys/class/nvme-subsystem/nvme-subsys*/model
@@ -265,13 +303,19 @@ round-robin
 
 === NVMe/FC
 
-•	Verify that the namespaces are created. For e.g.
+.	Verify that the namespaces are created. For example,
++
+----
 # nvme list
 Node               SN                                            Model                                       Namespace  Usage                     Format FW   Rev
 ------------------- ---------------------------------------- ---------------------------------------- ---------------- -------------------------- ----------------- --------------
 /dev/nvme1n1 814vWBNRwfBGAAAAAAAB  NetApp ONTAP Controller       1 85.90         GB / 85.90 GB        4 KiB + 0 B   FFFFFFFF
+----
 
-•	Verify the status of the ANA paths. For e.g.
+
+.	Verify the status of the ANA paths. For example,
++
+----
 # nvme list-subsys /dev/nvme1n1
 nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.04ba0732530911ea8e8300a098dfdd91:subsystem.nvme_145_1
 \
@@ -279,8 +323,11 @@ nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.04ba0732530911ea8e8300a098dfdd91:su
 +- nvme3 fc traddr=nn-0x208100a098dfdd91:pn-0x208500a098dfdd91 host_traddr=nn-0x200000109b579d5e:pn-0x100000109b579d5e live inaccessible
 +- nvme4 fc traddr=nn-0x208100a098dfdd91:pn-0x208400a098dfdd91 host_traddr=nn-0x200000109b579d5e:pn-0x100000109b579d5e live optimized
 +- nvme6 fc traddr=nn-0x208100a098dfdd91:pn-0x208300a098dfdd91 host_traddr=nn-0x200000109b579d5f:pn-0x100000109b579d5f live optimized
+----
 
-•	Verify the NetApp plug-in for the ONTAP namespace. For e.g.
+.	Verify the NetApp plug-in for the ONTAP namespace. For example,
++
+----
 # nvme netapp ontapdevices -o column
 Device Vserver Namespace Path NSID UUID Size
 ---------------- ------------------------- -------------------------------------------------- ---- -------------------------------------- ---------
@@ -300,7 +347,7 @@ Device Vserver Namespace Path NSID UUID Size
      }
   ]
 }
-
+----
 
 == Troubleshooting
 
