--- a/nvme_sles15_sp3.adoc
+++ b/nvme_sles15_sp3.adoc
@@ -34,17 +34,19 @@ Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability M
 
 === NVMe/FC
 
-==== Adapter Details
+.Adapter Details
 
-* Broadcom/Emulex
-**	32G FC Gandalf LPe32002 adapters used as NVMe/FC initiators on the SLES15 SP3 host
-**	LPe32002 firmware v12.8.340.8 (available on the Broadcom site)
-**	Lpfc inbox driver v12.8.0.10 (native lpfc driver bundled with the kernel)
+[options=""]
+|===
+| Broadcom/Emulex a| *	32G FC Gandalf LPe32002 adapters used as NVMe/FC initiators on the SLES15 SP3 host
+*	LPe32002 firmware v12.8.340.8 (available on the Broadcom site)
+*	Lpfc inbox driver v12.8.0.10 (native lpfc driver bundled with the kernel)
 
-* Marvell/QLogic
-**	32G FC QLE2742 adapters used as NVMe/FC initiators on the SLES15 SP3 NVMe/FC ANA host
-**	QLE2742 firmware v9.06.02 (available on the Marvell website)
-**	Qla2xxx native driver v10.02.00.106-k
+| Marvell/QLogic
+a| *	32G FC QLE2742 adapters used as NVMe/FC initiators on the SLES15 SP3 NVMe/FC ANA host
+*	QLE2742 firmware v9.06.02 (available on the Marvell website)
+*	Qla2xxx native driver v10.02.00.106-k
+|===
 
 ==== Fabric Switch
 *	32G FC Brocade G620 running FOS v9.0.0b
@@ -91,18 +93,17 @@ Now the host would pick the above kernel as the default grub entry during reboot
 ----
 +
 
-.	Next, upgrade to nvme-cli-1.13-3.3.1, by running a 'rpm -Uvh' on this package.
+.	Next, upgrade to link:http://nbsweb.eng.btc.netapp.in/u/marting/web/SLES15SP3/nvme-cli/1.13-3.3.1/[nvme-cli-1.13-3.3.1], by running  `rpm -Uvh` command on this package:
 +
 ----
 # rpm -qa|grep nvme-cli
 nvme-cli-1.13-3.3.1.x86_64
 ----
 +
-[NOTE]
-====
-The above nvme-cli MU package includes the following now:
 
-*	NVMe/FC auto-connect scripts - Included natively in the nvme-cli now. Threfore, you no longer need to install the Broadcom/QLogic auto-connects separately on the SLES15 SP3 host:
+The above nvme-cli MU package now includes the following:
+
+*	NVMe/FC auto-connect scripts - Included natively in the nvme-cli now. Therefore, you no longer need to install the Broadcom/QLogic auto-connects separately on the SLES15 SP3 host:
 +
 ----
 # rpm -ql nvme-cli-1.13-3.3.1.x86_64
@@ -138,7 +139,7 @@ ACTION=="add", SUBSYSTEM=="nvme-subsystem", ATTR{model}=="NetApp E-Series", ATTR
 +
 
 *	NetApp plug-in for ONTAP devices - The existing NetApp plug-in has now been modified to handle ONTAP namespaces as well.
-====
+
 +
 .	Check the hostnqn string at /etc/nvme/hostnqn on the host and ensure that it properly matches with the hostnqn string for the corresponding subsystem on the ONTAP array. For e.g.
 +
@@ -376,7 +377,7 @@ options qla2xxx ql2xnvmeenable=1 ql2xextended_error_logging=0x1e400000
 
 The errors displayed by `nvme-cli` during nvme discover, nvme connect or nvme connect-all operations and the workarounds are shown in the following table:
 
-[options="header"]
+[options="header", cols="20, 20, 50"]
 |===
 |Errors displayed by `nvme-cli`  | Probable cause | Workaround
 | `Failed to write to /dev/nvme-fabrics: Invalid argument`
